# object-detection

./: .envrc  .gitignore  Cargo.toml  README.md  cascade.json  environment.yml  flake.nix  rustfmt.toml
.direnv/: flake-profile  flake-profile.rc
application/: flake.nix  package-lock.json  package.json
application/.direnv/: flake-profile  flake-profile.rc
src/: cascade.rs  classifier.rs  classifiers.rs  cli.yml  cnn.py  constants.rs  detect.rs  detection.rs  features.rs  images.rs  integral_image.rs  main.rs  primitives.rs  recognize.rs  strong_classifier.rs  weak_classifier.rs
training/: flake.nix
training/.direnv/: flake-profile  flake-profile.rc
