[package]
name = "face-recognition"
version = "0.1.0"
authors = ["mwg2202 <mwg2202@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
text_io = "0.1.8"
image = "0.23.14"
